# playground

./: README.md  results
*/: test
c++/dicReader/: .cproject  .project  Dictionary.cpp  Dictionary.hpp  Term.cpp  Term.hpp  main.cpp
c++/dicomsrxml/: .cproject  .project  SRXmlReader.cpp  SRXmlReader.hpp
c++/dicomsrxmlgui/: .cproject  .project  SRComponentFactory.cpp  SRComponentFactory.hpp  SRComponentHandler.cpp  SRComponentHandler.hpp  SRFormBuilder.cpp  SRFormBuilder.hpp  SRFormUtil.cpp  SRFormUtil.hpp  SRXmlStrings.hpp  TestApp.cpp  TestApp.hpp  name_dictionary.dic  test.xml  unit_dictionary.dic
c++/dicomsrxmltest/: .cproject  .project  SRDicomXmlReadTest.cpp  SRDicomXmlReadTest.hpp  main.cpp
c++/exammodelxml/: .cproject  .project  ExamModelXml.cpp  ExamModelXml.hpp  ExamModelXmlReader.cpp  ExamModelXmlReader.hpp  ExamModelXmlWriter.cpp  ExamModelXmlWriter.hpp  teste.xml
c++/exammodelxmltest/: .cproject  .project  ExamModelXmlTest.cpp  ExamModelXmlTest.hpp  Main.cpp  test.xml
c++/gps-sms/: README  makefile
c++/opencv-haar/: Makefile  yuv-to-bgr.cpp  yuv-to-gray.cpp
c++/sistema_nebuloso/: .cproject  .project  sistema_nebuloso.pro
c++/static_metaprogramming/: Makefile  static_meta.cpp
c++/wxsrcomponents/: .cproject  .project  TestApp.cpp  TestApp.hpp  wxSRCheckBox.cpp  wxSRCheckBox.hpp  wxSRChoiceList.cpp  wxSRChoiceList.hpp  wxSRData.cpp  wxSRData.hpp  wxSRRadioBox.cpp  wxSRRadioBox.hpp  wxSRTextBox.cpp  wxSRTextBox.hpp  wxSRTextCtrl.cpp  wxSRTextCtrl.hpp  wxSRTextList.cpp  wxSRTextList.hpp
c++/xmlsearchertest/: .cdtbuild  .cdtproject  .cproject  .project  FindingElementDepthTest.cpp  FindingElementDepthTest.hpp  FindingElementsDepthTest.cpp  FindingElementsDepthTest.hpp  XmlSearcherTagTest.cpp  XmlSearcherTagTest.hpp  XmlSearcherTest.cpp  XmlSearcherTest.hpp  main.cpp  test.xml
c++/xmlutil/: .cproject  .project  Tag.h  XmlIo.hpp  XmlSearcher.cpp  XmlSearcher.hpp  XmlUtil.cpp  XmlUtil.hpp  XmlWriter.cpp  XmlWriter.hpp
c++/xmlwritertests/: .cdtbuild  .cdtproject  .cproject  .project  XmlWriterTest.cpp  XmlWriterTest.hpp  empty.xml  main.cpp
c++/xmppgui/: .cproject  .project  .project_initial  daniel.san.txt  hello.cpp
c/OrientacaoObjetoC/: circulo.c  circulo.h  quadrado.h
c/autoconf/bin_example/: configure.ac
c/autoconf/bin_example/src/: example.c
c/autotools/bin_example/src/: Makefile.am
c/autotools/lib_example/src/: Makefile.am
c/check-interface/: Makefile  main.c
c/exemploPoll/: poll.c
c/exportedfunc/: Makefile  caller.c  func.c
c/gerando-shared-object/: exemplo.c
c/gerandoSharedObject/: Makefile  exemplo.h  rodar_teste.sh
c/gnomevfs-bug/: crash_test.c  ok_test.c
c/gnomevfs_bug/: Makefile
c/gstreamer/app-specific-caps-problem/: Makefile.am  configure.ac
c/gstreamer/app-specific-caps-problem/src/: Makefile.am  gstappspecificcaps.c  gstappspecificcaps.h
c/link-time-substitution/static-libs/: Makefile.am  configure.ac
c/link-time-substitution/static-libs/src/: Makefile.am  libbar.c  libbar.h  libfoo.c  libfoo.h
c/link-time-substitution/static-libs/tests/: Makefile.am  libbar-test.c  libfoo-stub.c  libfoo-test.c
c/malloc-wrapper/: Makefile  call-malloc.c  call-malloc.h  malloc-wrapper.c
c/native-types-size/: Makefile  main.c
c/opencv-haar/: Makefile  opencv-test.cpp  yuv-to-bgr.cpp
c/padding/: Makefile  main.c
c/pipeEntreCePython/: main.c  teste.py
c/simple-object-orientation/: forma_geometrica.c  forma_geometrica.h  main.c  quadrado.c
c/sizeof-being-naughty/: main.c
c/stack-test/: Makefile
c/stack_test/: stack_test.c
c/tcp-socket/: README  receiver.c  sender.c
clojure/calc/: project.clj
clojure/hackers/: Makefile
clojure/projects/: Makefile  project.clj
clojure/repl/: Makefile
glsl/: fragment.shader  vertex.shader
go/benchmarks/: Makefile  go.mod  mem.go  mem_test.go
go/escape/: Makefile  README.md  ex1.go  ex2.go  ex3.go  ex4.go
go/generics/: generics.go  go.mod
go/httpstreaming/: clientpull.go  server.go
go/logrus/: example.go  go.mod
go/object-model/: functions.go  incdec.go  objiter.go
go/oddjson/: oddjson.go
go/opentracing/: go.mod  go.sum  jaeger.go
go/password/: go.mod  password.go
go/percent/: uniform.go
go/request-streaming/: README.md  go.mod  server.go
go/smallfiles/: go.mod  writer.go
go/string/: main.go
go/timeadd/: go.mod  main.go
go/tty/: tty.go
go/writer/: go.mod  writer.go
golang/avgs/: test.go
golang/execstress/: stress.go
golang/httpstreaming/: clientpush.go
golang/not-object-oriented/: oo.go
golang/object-model/: closures.go
golang/typehack/: cast.go  inspectype.go
java/Bingo/: .project
java/CatalogoDeLivros/: .project
java/CatalogoDeLivrosED/: .classpath  .project  CatalogoDeLivros.dix.xml
java/EightPuzzle/: .classpath
java/FlickrGadget/: .classpath  .project
java/Gedix/: .classpath  .project
java/OnCastAssessment/: .project
java/RedeTelefones/: .project
json/: odd.json  parse.go  parse.py
latex/presentation-template/: Makefile  presentation.tex
lisp/Tarefas/: .project  tarefa04.lisp  tarefa05.lisp  tarefa07.lisp  tarefaSamu06.lisp
lua/bindLuaParaC/: Makefile  README  calc.lua  calc_bind.c  calc_bind.h  calc_main.c
lua/debug_overhead_test/: profile_debug.lua
lua/gmainloop_test/: gmainloop_test.lua
lua/setfenv/: printer.lua
lua/telescope-test-suite-factory/: test-suite-factory.lua  test.lua
prolog/ProgramacaoLogica/: ComputadorLipe.plg  alunos.plg  computadores.plg  mediaNotas.plg  mediaNotasComentado.plg  minhaFamilia.plg  salario.plg  trabalhoComputadores  universidade.plg
python/AulaConcorrente/: referencias_concorrencia  slides_concorrencia.odp
python/CadastroFamiliasPSF/: .project  .pydevproject
python/CalculoNumerico/: .project  .pydevproject
python/CamadaDeTransporte/: .project  .pydevproject
python/ChatSerial/: .project  .pydevproject
python/ContadorDePalavras/: .project  .pydevproject
python/ConversorCSV/: .project  .pydevproject
redmine/: backup-redmine.sh  backup-sqlite-database.sh
sed/: example.txt  inserting-text-if-not-already-there.sh
vim/: Makefile  vimrc
(+1464 files in other folders)
